testing push from command line

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Dev Course Home Page</title>
+    This is a test to confirm push from command line
 </head>
 <body>
     <h1>Web Dev Course Home Page</h1>
