bootstrap applied - added container to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Dev Course Home Page</title>
-    This is a test to confirm push from command line
+    <link href="assignment/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
 </head>
-<body>
+<body class="container">
     <h1>Web Dev Course Home Page</h1>
 
     <p>
