--- a/public/assignment/user/register.html
+++ b/public/assignment/user/register.html
@@ -7,11 +7,11 @@
 <body>
 	<div class="container">
 		<h1>Register</h1>
-		<form action="register.html">
+		<form action="login.html">
 			<input type="text" class="form-control" placeholder="username"/>
 			<input type="password" class="form-control" placeholder="password"/>
 			<input type="password" class="form-control" placeholder="verify password"/>
-			<button type="submit" class="btn-primary form-control">Register</button>
+			<a href="profile.html" role="button" class="btn btn-primary form-control">Register</a>
 			<button type="submit" class="btn-danger form-control">Cancel</button>
 		</form>
 	</div>
