--- a/public/assignment/user/login.html
+++ b/public/assignment/user/login.html
@@ -8,11 +8,11 @@
 <body>
 	<div class="container">
 		<h1>Login</h1>
-		<form action="login.html">
+		<form>
 			<input type="text" class="form-control" placeholder="username"/>
 			<input type="password" class="form-control" placeholder="password"/>
-			<button type="submit" class="btn-primary form-control">Submit</button>
-			<button type="submit" class="btn-success form-control">Register</button>
+			<a href="profile.html" role="button" class="btn btn-primary form-control">Login</a> 
+			<a href="register.html" role="button" class="btn btn-danger form-control">Register</a> 
 		</form>
 	</div>
 </body>
