--- a/public/assignment/user/login.html
+++ b/public/assignment/user/login.html
@@ -9,10 +9,14 @@
 	<div class="container">
 		<h1>Login</h1>
 		<form>
+		<div class="form-group">
 			<input type="text" class="form-control" placeholder="username"/>
 			<input type="password" class="form-control" placeholder="password"/>
+			</div>
+			<div class="form-group">
 			<a href="profile.html" role="button" class="btn btn-primary form-control">Login</a> 
 			<a href="register.html" role="button" class="btn btn-danger form-control">Register</a> 
+			</div>
 		</form>
 	</div>
 </body>
