page-new.html design completed

--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Profile</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/styles.css"/>
+	<link rel="stylesheet" href="../css/styles.css"/>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
