--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <a href="test/index.html">Test MongoDB</a>
         </li>
         <li>
-            <a href="https://github.com/kaushikveluru/veluru-kaushik-webdev">Your public repository at GitHub.com</a>
+            <a href="https://github.com/kaushikveluru/veluru-kaushik-webdev">My GitHub repository</a>
         </li>
     </ul>
 </body>
