fixed broken link to widget-chooser.html

--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -19,7 +19,7 @@
 		     <a class="navbar-brand" href="#">Widgets</a> 
 		     
 		     <p class="navbar-text pull-right">
-		      	<a href="widget-choose.html" class="navbar-link">
+		      	<a href="widget-chooser.html" class="navbar-link">
 		      		<span class="glyphicon glyphicon-plus"></span>        	
 			
 		      	</a>
