--- a/public/assignment/widget/widget-chooser.html
+++ b/public/assignment/widget/widget-chooser.html
@@ -22,43 +22,43 @@
 </nav>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Header</a>
+		<a href="widget-heading.html" class="navbar-text">Header</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Label</a>
+		<a href="widget-heading.html" class="navbar-text">Label</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">HTML</a>
+		<a href="widget-heading.html" class="navbar-text">HTML</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Text Input</a>
+		<a href="widget-heading.html" class="navbar-text">Text Input</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Link</a>
+		<a href="widget-heading.html" class="navbar-text">Link</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Button</a>
+		<a href="widget-heading.html" class="navbar-text">Button</a>
 </div>
 
 <div class="row">
-		<a href="website-image.html" class="navbar-text">Image</a>
+		<a href="widget-image.html" class="navbar-text">Image</a>
 </div>
 
 <div class="row">
-		<a href="website-youtube.html" class="navbar-text">YouTube</a>
+		<a href="widget-youtube.html" class="navbar-text">YouTube</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Data Table</a>
+		<a href="widget-heading.html" class="navbar-text">Data Table</a>
 </div>
 
 <div class="row">
-		<a href="website-heading.html" class="navbar-text">Repeater</a>
+		<a href="widget-heading.html" class="navbar-text">Repeater</a>
 </div>
 
 
