glyphicos push right fixed

--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -16,8 +16,9 @@
 		      	</a>
 	     	</p>
 
-		     <a class="navbar-brand" href="#">Websites</a> 
-		     
+		     <a class="navbar-brand" href="#">Websites</a>
+		</div>
+		  <div class="navbar-right">
 		     <p class="navbar-text pull-right">
 		      	<a href="website-new.html" class="navbar-link">
 		      		<span class="glyphicon glyphicon-plus"></span>        	
@@ -87,7 +88,9 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#"></a>
-       <p class="navbar-text pull-right">
+	</div>
+	  <div class="navbar-right">
+       <p class="navbar-text">
        	<a href="../user/profile.html" class="navbar-link">
 			<span class="glyphicon glyphicon-user"></span>
        	</a>
