--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -10,10 +10,11 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Profile</a> 
-      <p class="navbar-text pull-right">
+    </div>
+    <div class="navbar-right">
+      <p class="navbar-text ">
       	<a href="#" class="navbar-link">
-      		<span class="glyphicon glyphicon-ok"></span>        	
-	
+      		<span class="glyphicon glyphicon-ok" ></span>        	
       	</a>
       </p>      
     </div>
@@ -55,7 +56,10 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#"></a>
-       <p class="navbar-text pull-right">
+	</div>
+
+	  <div class="navbar-right">
+       <p class="navbar-text">
        	<a href="#" class="navbar-link">
 			<span class="glyphicon glyphicon-user"></span>
        		
