--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -16,8 +16,9 @@
 		      	</a>
 	     	</p>
 
-		     <a class="navbar-brand" href="#">Edit Website</a> 
-		     
+		     <a class="navbar-brand" href="#">Edit Website</a>
+		</div>
+		  <div class="navbar-right">
 		     <p class="navbar-text pull-right">
 		      	<a href="website-list.html" class="navbar-link">
 		      		<span class="glyphicon glyphicon-ok"></span>        	
