--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -16,8 +16,9 @@
 		      	</a>
 	     	</p>
 
-		     <a class="navbar-brand" href="#">New Website</a> 
-		     
+		     <a class="navbar-brand" href="#">New Website</a>
+		</div>
+		  <div class="navbar-right">
 		     <p class="navbar-text pull-right">
 		      	<a href="website-list.html" class="navbar-link">
 		      		<span class="glyphicon glyphicon-ok"></span>        	
@@ -47,7 +48,9 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#"></a>
-       <p class="navbar-text pull-right">
+	</div>
+	  <div class="navbar-right">
+       <p class="navbar-text ">
        	<a href="../user/profile.html" class="navbar-link">
 			<span class="glyphicon glyphicon-user"></span>
        	</a>
