--- a/public/assignment/widget/widget-chooser.html
+++ b/public/assignment/widget/widget-chooser.html
@@ -73,7 +73,9 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#"></a>
-       <p class="navbar-text pull-right">
+	</div>
+	  <div class="navbar-right">
+       <p class="navbar-text">
        	<a href="../user/profile.html" class="navbar-link">
 			<span class="glyphicon glyphicon-user"></span>
        	</a>
