--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -16,9 +16,10 @@
 		      	</a>
 	     	</p>
 
-		     <a class="navbar-brand" href="#">Widgets</a> 
-		     
-		     <p class="navbar-text pull-right">
+		     <a class="navbar-brand" href="#">Widgets</a>
+		</div>
+		  <div class="navbar-right">
+		     <p class="navbar-text">
 		      	<a href="widget-chooser.html" class="navbar-link">
 		      		<span class="glyphicon glyphicon-plus"></span>        	
 			
@@ -125,7 +126,9 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#"></a>
-       <p class="navbar-text pull-right">
+	</div>
+	  <div class="navbar-right">
+       <p class="navbar-text">
        	<a href="../user/profile.html" class="navbar-link">
 			<span class="glyphicon glyphicon-user"></span>
        	</a>
