added view port to all pages

--- a/public/assignment/user/register.html
+++ b/public/assignment/user/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width,intial-scale=1">
 	<title>Register</title>
 	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
 </head>
