--- a/public/assignment/user/login.html
+++ b/public/assignment/user/login.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width,intial-scale=1">
 	<title>Login</title>
 	<link href="../bootstrap/css/bootstrap.css" rel="stylesheet"></link>
 </head>
