--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width,intial-scale=1">
 	<title>Websites</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/styles.css">
@@ -56,6 +57,7 @@
 </div>
 
 <div class="row">
+
 	<p class="navbar-text pull-left">
 		<a href="../page/page-list.html" class="navbar-link">Blogglog App</a>
 	</p>
