--- a/public/assignment/widget/widget-youtube.html
+++ b/public/assignment/widget/widget-youtube.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Widget Edit</title>
+	<meta name="viewport" content="width=device-width,intial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
