bug fix : fixed header and footer in all pages

--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -7,58 +7,41 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<div class="container">
+<div class="container">
+
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	    	<p class="navbar-text pull-left">
-		      	<a href="website-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-chevron-left"></span>        	
-		      	</a>
-	     	</p>
-
-		     <a class="navbar-brand" href="#">New Website</a>
+		<div class=" container-fluid">
+			<a href="../user/profile.html" class="navbar-text pull-left">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a href="#" class="navbar-brand">New Website</a>
+			<a class="navbar-text pull-right" href="website-list.html">
+				<span class="glyphicon glyphicon-ok"></span>
+			</a>
 		</div>
-		  <div class="navbar-right">
-		     <p class="navbar-text pull-right">
-		      	<a href="website-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-ok"></span>        	
-			
-		      	</a>
-	      </p>      
-	    </div>
-	  </div>
-</nav>
+	</nav>
 
-<form>
-	<div class="form-group">
-		<label for="name">Name</label>
-		<input id="name" type="text" class="form-control" placeholder="Name"/>
-	</div>
+	<form>
+		<div class="form-group">
+			<label for="name">Name</label>
+			<input id="name" type="text" class="form-control" placeholder="Name"/>
+		</div>
 
-	<div class="form-group">
-		<label for="description">Description</label>
-		<textarea id="description" class="form-control" placeholder="Description"></textarea>
-	</div>
+		<div class="form-group">
+			<label for="description">Description</label>
+			<textarea id="description" class="form-control" placeholder="Description"></textarea>
+		</div>
 
-</form>
+	</form>
 
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="../user/profile.html">
+				<span class="glyphicon glyphicon-user"></span>
+			</a>
+		</div>
+	</nav>
 
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
-	</div>
-	  <div class="navbar-right">
-       <p class="navbar-text ">
-       	<a href="../user/profile.html" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
 </div>
 </body>
 </html>
