--- a/public/assignment/widget/widget-chooser.html
+++ b/public/assignment/widget/widget-chooser.html
@@ -7,83 +7,66 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<div class="container">
+<div class="container">
+
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	    	<p class="navbar-text pull-left">
-		      	<a href="widget-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-chevron-left"></span>        	
-		      	</a>
-	     	</p>
+		<div class=" container-fluid">
+			<a href="widget-list.html" class="navbar-text pull-left">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a href="#" class="navbar-brand">Choose Widget</a>
+		</div>
+	</nav>
 
-		     <a class="navbar-brand" href="#">Choose Widget</a> 
-	    </div>
-	  </div>
-</nav>
 
-<div class="row">
+	<div class="row">
 		<a href="widget-heading.html" class="navbar-text">Header</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Label</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">HTML</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Text Input</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Link</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Button</a>
-</div>
-
-<div class="row">
-		<a href="widget-image.html" class="navbar-text">Image</a>
-</div>
-
-<div class="row">
-		<a href="widget-youtube.html" class="navbar-text">YouTube</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Data Table</a>
-</div>
-
-<div class="row">
-		<a href="widget-heading.html" class="navbar-text">Repeater</a>
-</div>
-
-
-
-
-
-
-
-
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
 	</div>
-	  <div class="navbar-right">
-       <p class="navbar-text">
-       	<a href="../user/profile.html" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">Label</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">HTML</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">Text Input</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">Link</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">Button</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-image.html" class="navbar-text">Image</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-youtube.html" class="navbar-text">YouTube</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">Data Table</a>
+	</div>
+
+	<div class="row">
+		<a href="widget-heading.html" class="navbar-text">Repeater</a>
+	</div>
+
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="../user/profile.html">
+				<span class="glyphicon glyphicon-user"></span>
+			</a>
+		</div>
+	</nav>
+
 </div>
 </body>
 </html>
