--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -7,136 +7,121 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<div class="container">
+<div class="container">
+
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	    	<p class="navbar-text pull-left">
-		      	<a href="../page/page-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-chevron-left"></span>        	
-		      	</a>
-	     	</p>
-
-		     <a class="navbar-brand" href="#">Widgets</a>
+		<div class=" container-fluid">
+			<a href="../page/page-list.html" class="navbar-text pull-left">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a href="#" class="navbar-brand">Widgets</a>
+			<a class="navbar-text pull-right" href="widget-chooser.html">
+				<span class="glyphicon glyphicon-ok"></span>
+			</a>
 		</div>
-		  <div class="navbar-right">
-		     <p class="navbar-text">
-		      	<a href="widget-chooser.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-plus"></span>        	
-			
-		      	</a>
-	      </p>      
-	    </div>
-	  </div>
-</nav>
+	</nav>
 
-<div class="row form">
+	<div class="row form">
 
-	<h1 class="navbar-text">GIZMODO</h1>
-	<p class="navbar-text pull-right">
-		<a href="widget-heading.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="#" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
+		<h1 class="navbar-text">GIZMODO</h1>
+		<p class="navbar-text pull-right">
+			<a href="widget-heading.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="#" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
 
-	</p>
-</div>
-
-<div class="row">
-	<h3 class="navbar-text">US Senate Reaches Compromise on Emergency Zika Funding</h3>
-	<p class="navbar-text pull-right">
-		<a href="widget-heading.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="#" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
-
-	</p>
-</div>
-
-<div class="row">
-	<image width = 80% height = 40px src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Aedes_Albopictus.jpg" class="navbar-text"></image>
-	<p class="navbar-text pull-right">
-		<a href="widget-image.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="widget-image.html" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
-
-	</p>
-</div>
-<div class="row">
-	<p class="navbar-text">some news article description about Zika and Emergency Zika Funding</p>
-	<p class="navbar-text pull-right">
-		<a href="widget-text-input.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
-
-	</p>
-</div>
-
-<div class="row">
-	<h3 class="navbar-text">Man in WingSuit Flies Straight Through a Ring of Fire</h3>
-	<p class="navbar-text pull-right">
-		<a href="widget-heading.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="#" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
-
-	</p>
-</div>
-
-<div class="row">
-	<video width="640"  height="360" src="https://www.youtube.com/watch?v=uLWLashCXHE"  controls preload></video>
-	<p class="navbar-text pull-right">
-		<a href="widget-heading.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="#" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
-
-	</p>
-</div>
-
-<div class="row">
-	<p class="navbar-text">text about man in wingsuit flying through ring of fire</p>
-	<p class="navbar-text pull-right">
-		<a href="widget-text-input.html" class="navbar-link">
-			<span class="glyphicon glyphicon-cog"></span>        						
-		</a>
-		<a href="" class="navbar-link">
-			<span class="glyphicon glyphicon-align-justify"></span>        						
-		</a>
-
-	</p>
-</div>
-
-
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
+		</p>
 	</div>
-	  <div class="navbar-right">
-       <p class="navbar-text">
-       	<a href="../user/profile.html" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
+
+	<div class="row">
+		<h3 class="navbar-text">US Senate Reaches Compromise on Emergency Zika Funding</h3>
+		<p class="navbar-text pull-right">
+			<a href="widget-heading.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="#" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+
+		</p>
+	</div>
+
+	<div class="row">
+		<image width = 80% height = 40px src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Aedes_Albopictus.jpg" class="navbar-text"></image>
+		<p class="navbar-text pull-right">
+			<a href="widget-image.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="widget-image.html" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+
+		</p>
+	</div>
+	<div class="row">
+		<p class="navbar-text">some news article description about Zika and Emergency Zika Funding</p>
+		<p class="navbar-text pull-right">
+			<a href="widget-text-input.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+
+		</p>
+	</div>
+
+	<div class="row">
+		<h3 class="navbar-text">Man in WingSuit Flies Straight Through a Ring of Fire</h3>
+		<p class="navbar-text pull-right">
+			<a href="widget-heading.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="#" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+
+		</p>
+	</div>
+
+	<div class="row">
+		<video width="640"  height="360" src="https://www.youtube.com/watch?v=uLWLashCXHE"  controls preload></video>
+		<p class="navbar-text pull-right">
+			<a href="widget-heading.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="#" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+
+		</p>
+	</div>
+
+	<div class="row">
+		<p class="navbar-text">text about man in wingsuit flying through ring of fire</p>
+		<p class="navbar-text pull-right">
+			<a href="widget-text-input.html" class="navbar-link">
+				<span class="glyphicon glyphicon-cog"></span>
+			</a>
+			<a href="" class="navbar-link">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+
+		</p>
+	</div>
+
+
+
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="../user/profile.html">
+				<span class="glyphicon glyphicon-user"></span>
+			</a>
+		</div>
+	</nav>
+
 </div>
 </body>
 </html>
