--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -8,67 +8,52 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Profile</a> 
-    </div>
-    <div class="navbar-right">
-      <p class="navbar-text ">
-      	<a href="#" class="navbar-link">
-      		<span class="glyphicon glyphicon-ok" ></span>        	
-      	</a>
-      </p>      
-    </div>
-  </div>
+	<div class=" container-fluid">
+		<a class="navbar-brand">Profile</a>
+		<a class="navbar-text pull-right" href="#">
+			<span class="glyphicon glyphicon-ok white"></span>
+		</a>
+	</div>
 </nav>
+
+<div class="container-fluid">
+	<form action="login.html">
+
+		<div class="form-group">
+			<label for="username">Username</label>
+			<input id="username" type="text" class="form-control" placeholder="username"/>
+		</div>
+		<div class="form-group">
+			<label for="email">Email</label>
+			<input id="email" type="email" class="form-control" placeholder="username@gmail.com"/>
+		</div>
+
+		<div class="form-group">
+			<label for="firstname">First Name</label>
+			<input id="firstname" type="text" class="form-control" placeholder="firstname"/>
+		</div>
+
+		<div class="form-group">
+			<label for="lastname">Last Name</label>
+			<input id="lastname" type="text" class="form-control" placeholder="lastname"/>
+		</div>
+
+		<div class="form-group">
+			<a href="../website/website-list.html" role="button" class="btn btn-primary form-control">Websites</a>
+		</div>
+
+		<div class="form-group">
+			<button type="submit" class="btn-danger form-control">Logout</button>
+		</div>
+
+	</form>
+</div>
+<nav class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container-fluid">
-		<form action="login.html">
-		
-			<div class="form-group">
-				<label for="username">Username</label>
-				<input id="username" type="text" class="form-control" placeholder="username"/>
-			</div>
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input id="email" type="email" class="form-control" placeholder="username@gmail.com"/>
-			</div>
-
-			<div class="form-group">
-				<label for="firstname">First Name</label>
-				<input id="firstname" type="text" class="form-control" placeholder="firstname"/>
-			</div>
-
-			<div class="form-group">
-				<label for="lastname">Last Name</label>
-				<input id="lastname" type="text" class="form-control" placeholder="lastname"/>
-			</div>
-
-			<div class="form-group">
-				<a href="../website/website-list.html" role="button" class="btn btn-primary form-control">Websites</a>
-			</div>
-
-			<div class="form-group">
-				<button type="submit" class="btn-danger form-control">Logout</button>
-			</div>
-
-		</form>
+		<a class="navbar-text pull-right" href="#">
+			<span class="glyphicon glyphicon-user white"></span>
+		</a>
 	</div>
-	<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
-	</div>
-
-	  <div class="navbar-right">
-       <p class="navbar-text">
-       	<a href="#" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       		
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
 </nav>
 
 </body>
