--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -7,61 +7,48 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<div class="container">
+<div class="container">
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	    	<p class="navbar-text pull-left">
-		      	<a href="website-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-chevron-left"></span>        	
-		      	</a>
-	     	</p>
-
-		     <a class="navbar-brand" href="#">Edit Website</a>
+		<div class=" container-fluid">
+			<a href="website-list.html" class="navbar-text pull-left" href="#">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a href="#" class="navbar-brand">Edit Website</a>
+			<a class="navbar-text pull-right" href="website-list.html">
+				<span class="glyphicon glyphicon-ok"></span>
+			</a>
 		</div>
-		  <div class="navbar-right">
-		     <p class="navbar-text pull-right">
-		      	<a href="website-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-ok"></span>        	
-			
-		      	</a>
-	      </p>      
-	    </div>
-	  </div>
-</nav>
-
-<form>
-	<div class="form-group">
-		<label for="name">Website Name</label>
-		<input id="name" type="text" class="form-control" placeholder="Blogger"/>
-	</div>
-
-	<div class="form-group">
-		<label for="description">Website Description</label>
-		<textarea id="description" class="form-control" placeholder="Description"></textarea>
-	</div>
-
-	<div class="form-group">
-		<a href="website-list.html" role="button" class="btn btn-danger form-control">Delete</a>
-	</div>
-
-
-</form>
+	</nav>
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
-       <p class="navbar-text pull-right">
-       	<a href="../user/profile.html" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
+
+	<form>
+		<div class="form-group">
+			<label for="name">Website Name</label>
+			<input id="name" type="text" class="form-control" placeholder="Blogger"/>
+		</div>
+
+		<div class="form-group">
+			<label for="description">Website Description</label>
+			<textarea id="description" class="form-control" placeholder="Description"></textarea>
+		</div>
+
+		<div class="form-group">
+			<a href="website-list.html" role="button" class="btn btn-danger form-control">Delete</a>
+		</div>
+
+
+	</form>
+
+
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="../user/profile.html">
+				<span class="glyphicon glyphicon-user"></span>
+			</a>
+		</div>
+	</nav>
 </div>
 </body>
 </html>
