--- a/public/assignment/widget/widget-heading.html
+++ b/public/assignment/widget/widget-heading.html
@@ -7,68 +7,52 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<div class="container">
+<div class="container">
+
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	    	<p class="navbar-text pull-left">
-		      	<a href="widget-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-chevron-left"></span>        	
-		      	</a>
-	     	</p>
-
-		     <a class="navbar-brand" href="#">Widget Edit</a>
+		<div class=" container-fluid">
+			<a href="widget-list.html" class="navbar-text pull-left">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a href="#" class="navbar-brand">Widget Edit</a>
+			<a class="navbar-text pull-right" href="website-list.html">
+				<span class="glyphicon glyphicon-ok"></span>
+			</a>
 		</div>
-		  <div class="navbar-right">
-		     <p class="navbar-text">
-		      	<a href="widget-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-ok"></span>        	
-			
-		      	</a>
-	      </p>      
-	    </div>
-	  </div>
-</nav>
-
-<form>
-	<div class="form-group">
-		<label for="name">Widget Name</label>
-		<input id="name" type="text" class="form-control" placeholder="Header"/>
-	</div>
-
-	<div class="form-group">
-		<label for="text">Text</label>
-		<input type="text" id="text" class="form-control" placeholder="US Senate blah blah"/>
-	</div>
-
-	<div class="form-group">
-		<label for="size">Size</label>
-		<input type="text" id="size" class="form-control" placeholder="1"/>
-	</div>
-
-	<div class="form-group">
-		<a href="widget-list.html" role="button" class="btn btn-danger form-control">Delete</a>
-	</div>
+	</nav>
 
 
-</form>
+	<form>
+		<div class="form-group">
+			<label for="name">Widget Name</label>
+			<input id="name" type="text" class="form-control" placeholder="Header"/>
+		</div>
+
+		<div class="form-group">
+			<label for="text">Text</label>
+			<input type="text" id="text" class="form-control" placeholder="US Senate blah blah"/>
+		</div>
+
+		<div class="form-group">
+			<label for="size">Size</label>
+			<input type="text" id="size" class="form-control" placeholder="1"/>
+		</div>
+
+		<div class="form-group">
+			<a href="widget-list.html" role="button" class="btn btn-danger form-control">Delete</a>
+		</div>
 
 
+	</form>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
-	</div>
-	  <div class="navbar-right">
-       <p class="navbar-text">
-       	<a href="../user/profile.html" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="../user/profile.html">
+				<span class="glyphicon glyphicon-user"></span>
+			</a>
+		</div>
+	</nav>
+
 </div>
 </body>
 </html>
