--- a/public/assignment/widget/widget-image.html
+++ b/public/assignment/widget/widget-image.html
@@ -7,79 +7,62 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<div class="container">
+<div class="container">
+
 	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	    	<p class="navbar-text pull-left">
-		      	<a href="widget-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-chevron-left"></span>        	
-		      	</a>
-	     	</p>
-
-		     <a class="navbar-brand" href="#">Widget Edit</a>
+		<div class=" container-fluid">
+			<a href="widget-list.html" class="navbar-text pull-left">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a href="#" class="navbar-brand">Widget Edit</a>
+			<a class="navbar-text pull-right" href="website-list.html">
+				<span class="glyphicon glyphicon-ok"></span>
+			</a>
 		</div>
-		  <div class="navbar-right">
-		     <p class="navbar-text">
-		      	<a href="widget-list.html" class="navbar-link">
-		      		<span class="glyphicon glyphicon-ok"></span>        	
-			
-		      	</a>
-	      </p>      
-	    </div>
-	  </div>
-</nav>
+	</nav>
 
-<form>
-	<div class="form-group">
-		<label for="name">Widget Name</label>
-		<input id="name" type="text" class="form-control" placeholder="Header"/>
-	</div>
+	<form>
+		<div class="form-group">
+			<label for="name">Widget Name</label>
+			<input id="name" type="text" class="form-control" placeholder="Header"/>
+		</div>
 
-	<div class="form-group">
-		<label for="text">Text</label>
-		<input type="text" id="text" class="form-control" placeholder="Description of the image"/>
-	</div>
+		<div class="form-group">
+			<label for="text">Text</label>
+			<input type="text" id="text" class="form-control" placeholder="Description of the image"/>
+		</div>
 
-	<div class="form-group">
-		<label for="url">URL</label>
-		<input type="url" id="url" class="form-control" placeholder="https://www.google.com/search?site=&tbm=isch&source=hp&biw=1366&bih=638&q=earth&oq=earth&gs_l=img.3..0l10.4144.5818.0.6108.8.6.1.1.1.0.125.645.2j4.6.0....0...1ac.1.64.img..0.8.656.7yymRbwTZLo#imgrc=YgY4l5SdNTT6OM%3A"/>
-	</div>
+		<div class="form-group">
+			<label for="url">URL</label>
+			<input type="url" id="url" class="form-control" placeholder="https://www.google.com/search?site=&tbm=isch&source=hp&biw=1366&bih=638&q=earth&oq=earth&gs_l=img.3..0l10.4144.5818.0.6108.8.6.1.1.1.0.125.645.2j4.6.0....0...1ac.1.64.img..0.8.656.7yymRbwTZLo#imgrc=YgY4l5SdNTT6OM%3A"/>
+		</div>
 
-	<div class="form-group">
-		<label for="width">Width</label>
-		<input type="number" id="width" class="form-control" placeholder="100%"/>
-	</div>
+		<div class="form-group">
+			<label for="width">Width</label>
+			<input type="number" id="width" class="form-control" placeholder="100%"/>
+		</div>
 
-	<div class="form-group">
-		<label for="upload">Upload</label>
-		<input type="file" id="upload" class="form-control" placeholder="No file chosen"/>
-	</div>
+		<div class="form-group">
+			<label for="upload">Upload</label>
+			<input type="file" id="upload" class="form-control" placeholder="No file chosen"/>
+		</div>
 
-	<div class="form-group">
-		<a href="widget-list.html" role="button" class="btn btn-danger form-control">Delete</a>
-	</div>
+		<div class="form-group">
+			<a href="widget-list.html" role="button" class="btn btn-danger form-control">Delete</a>
+		</div>
 
 
-</form>
+	</form>
+
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="../user/profile.html">
+				<span class="glyphicon glyphicon-user"></span>
+			</a>
+		</div>
+	</nav>
 
 
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"></a>
-
-	</div>
-	  <div class="navbar-right">
-		  <p class="navbar-text">
-       	<a href="../user/profile.html" class="navbar-link">
-			<span class="glyphicon glyphicon-user"></span>
-       	</a>
-      </p>
-    </div>
-  </div>
-</nav>
 </div>
 </body>
 </html>
