--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -16,7 +16,7 @@
 			</a>
 			<a href="#" class="navbar-brand">Websites</a>
 			<a class="navbar-text pull-right" href="website-new.html">
-				<span class="glyphicon glyphicon-ok"></span>
+				<span class="glyphicon glyphicon-plus"></span>
 			</a>
 		</div>
 	</nav>
