--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -11,17 +11,114 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="../user/profile.html" class="navbar-text pull-left">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-			</a>
-			<a href="#" class="navbar-brand">New Website</a>
-			<a class="navbar-text pull-right" href="website-list.html">
-				<span class="glyphicon glyphicon-ok"></span>
-			</a>
+			<div class="hidden-xs">  <!-- Not visible on extra small screens-->
+				<div class="col-sm-4 left-full">
+					<a href="../user/profile.html" class="navbar-text">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+					</a>
+					<a href="#" class="navbar-brand">Websites</a>
+					<a class="navbar-text pull-right" href="website-new.html">
+						<span class="glyphicon glyphicon-plus"></span>
+					</a>
+				</div>
+				<div class="col-sm-8 no-padding-right">
+					<a href="#" class="navbar-brand">New Website</a>
+					<a class="navbar-text pull-right" href="website-list.html">
+						<span class="glyphicon glyphicon-ok"></span>
+					</a>
+				</div>
+			</div>
+
+			<div class="visible-xs"> <!-- Visible only on extra small screens-->
+				<a href="../user/profile.html" class="navbar-text pull-left">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+				</a>
+				<a href="#" class="navbar-brand">New Website</a>
+				<a class="navbar-text pull-right" href="website-list.html">
+					<span class="glyphicon glyphicon-ok"></span>
+				</a>
+			</div>
+
+
 		</div>
 	</nav>
 
-	<form>
+
+
+	<div class="hidden-xs">
+		<vr></vr>
+		<div class="col-sm-4">
+				<div class="row">
+					<p class="navbar-text pull-left">
+						<a href="../page/page-list.html" class="navbar-link">Address Book App</a>
+					</p>
+					<p class="navbar-text pull-right">
+						<a href="website-edit.html" class="navbar-link">
+							<span class="glyphicon glyphicon-cog"></span>
+
+						</a>
+					</p>
+
+				</div>
+
+				<div class="row">
+					<p class="navbar-text pull-left">
+						<a href="../page/page-list.html" class="navbar-link">Blogger</a>
+					</p>
+					<p class="navbar-text pull-right">
+						<a href="website-edit.html" class="navbar-link">
+							<span class="glyphicon glyphicon-cog"></span>
+
+						</a>
+					</p>
+
+				</div>
+
+				<div class="row">
+
+					<p class="navbar-text pull-left">
+						<a href="../page/page-list.html" class="navbar-link">Blogglog App</a>
+					</p>
+					<p class="navbar-text pull-right">
+						<a href="website-edit.html" class="navbar-link">
+							<span class="glyphicon glyphicon-cog"></span>
+
+						</a>
+					</p>
+
+				</div>
+
+				<div class="row">
+					<p class="navbar-text pull-left">
+						<a href="../page/page-list.html" class="navbar-link">Script Testing App</a>
+					</p>
+					<p class="navbar-text pull-right">
+						<a href="website-edit.html" class="navbar-link">
+							<span class="glyphicon glyphicon-cog"></span>
+
+						</a>
+					</p>
+
+				</div>
+
+		</div>
+		<div class="col-sm-8">
+			<form>
+				<div class="form-group">
+					<label for="name">Name</label>
+					<input id="name" type="text" class="form-control" placeholder="Name"/>
+				</div>
+
+				<div class="form-group">
+					<label for="description">Description</label>
+					<textarea id="description" class="form-control" placeholder="Description"></textarea>
+				</div>
+			</form>
+		</div>
+	</div>
+
+	<div class="visible-xs">
+		<form>
 		<div class="form-group">
 			<label for="name">Name</label>
 			<input id="name" type="text" class="form-control" placeholder="Name"/>
@@ -31,8 +128,10 @@
 			<label for="description">Description</label>
 			<textarea id="description" class="form-control" placeholder="Description"></textarea>
 		</div>
+		</form>
+	</div>
 
-	</form>
+
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
