initial angular app with login and register routes working

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Dev Course Home Page</title>
-    <link href="assignment/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
 </head>
 <body class="container">
     <h1>Web Dev Course Home Page</h1>
@@ -18,7 +17,7 @@
             <a href="project/index.html">Project</a>
         </li>
         <li>
-            <a href="assignment/user/login.html">Assignment</a>
+            <a href="assignment/index.html">Assignment</a>
         </li>
         <li>
             <a href="test/index.html">Test MongoDB</a>
