--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,10 +2,16 @@
 <html lang="en" ng-app="WebAppMaker">
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="views/user/user.controller.client.js"></script>
+    <script src="views/page/page.controller.client.js"></script>
+    <script src="views/website/website.controller.client.js"></script>
+    <script src="views/widget/widget.controller.client.js"></script>
+
     <meta charset="UTF-8">
     <title>Index Page</title>
 </head>
