--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kaushik's Home Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body class="container">
-    <h1>Web Dev Course Home Page</h1>
 
-    <p>
-        Customize this home page to your linking.
-    </p>
+    <nav class="navbar navbar-default navbar-fixed-top">
 
-    <h2>Required links</h2>
-    <ul>
-        <li>
-            <a href="project/index.html">Project</a>
-        </li>
-        <li>
-            <a href="assignment/index.html">Assignment</a>
-        </li>
-        <li>
-            <a href="test/index.html">Test MongoDB</a>
-        </li>
-        <li>
-            <a href="https://github.com/kaushikveluru/veluru-kaushik-webdev">My GitHub repository</a>
-        </li>
-    </ul>
+            <div class="col-xs-8">
+                <a href="#" class="navbar-brand navbar-text profile-name">Kaushik Veluru</a>
+            </div>
+
+            <div class="col-xs-4">
+                <image class="profile-image" src="media/kaushik.jpeg"></image>
+            </div>
+
+    </nav>
+
+    <div class="container-fluid">
+
+        <h1>Web Dev Course Home Page</h1>
+
+        <p>
+            This page is the entry point to all the works that are done during Fall'16 semester for CS5610 course.
+        </p>
+
+        <div class="row">
+            <div class="col-xs-6">
+                <a role="button" class="btn btn-primary form-control" href="project/index.html">Project</a>
+            </div>
+            <div class="col-xs-6">
+                <a role="button" class="btn btn-primary form-control" href="assignment/index.html">Assignment</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <a role="button" class="btn btn-primary form-control" href="test/index.html">Test MongoDB</a>
+            </div>
+            <div class="col-xs-6">
+                <a role="button" class="btn btn-primary form-control" href="https://github.com/kaushikveluru/veluru-kaushik-webdev">GitHub Repository</a>
+            </div>
+        </div>
+
+    </div>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+
+            <p class="navbar-text navbar-brand">Developed by Kaushik Veluru</p>
+
+    </nav>
 </body>
 </html>
