added viewport meta to assignment/index.html

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -13,6 +13,7 @@
     <script src="views/widget/widget.controller.client.js"></script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
 </head>
 <body>
