added sort and upload code. not working

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="WebAppMaker">
 <head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+
+
     <script src="views/user/user.controller.client.js"></script>
     <script src="views/page/page.controller.client.js"></script>
     <script src="views/website/website.controller.client.js"></script>
     <script src="views/widget/widget.controller.client.js"></script>
+
+
     <script src="services/page.service.client.js"></script>
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
