project basic working version

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Kaushik's Home Page</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core css -->
     <link href="home/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
+    <!-- Custom css -->
     <link href="home/css/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -52,7 +52,7 @@
                     <a href="/assignment/index.html">Assignment</a>
                 </li>
                 <li>
-                    <a href="/project/index.html">Project</a>
+                    <a href="/project/client/index.html">Project</a>
                 </li>
                 <li>
                     <a href="/test/index.html">Test MongoDB</a>
