--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -12,7 +12,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.min.js"></script>
-        <script src="http://maps.googleapis.com/maps/api/js?sensor=false&extension=.js&output=embed"></script>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
 
@@ -25,6 +24,9 @@
         <script src="views/search/details.controller.js"></script>
         <script src="views/users/register.controller.js"></script>
         <script src="views/users/profile.controller.js"></script>
+        <script src="views/users/myreviews.controller.js"></script>
+        <script src="views/users/following.controller.js"></script>
+        <script src="views/users/followers.controller.js"></script>
         <script src="views/users/login.controller.js"></script>
         <script src="views/admin/admin.controller.js"></script>
         <script src="views/main/main.controller.js"></script>
